# CompGraph

./: README.md  pyproject.toml
compgraph/: algorithms.py  external_sort.py  graph.py
compgraph.egg-info/: PKG-INFO  SOURCES.txt
compgraph/operations/: __init__.py  abstract.py  join.py  map.py  reduce.py  utils.py
examples/: run_inverted_index_graph.py  run_pmi_graph.py  run_word_count.py  run_yandex_maps_graph.py
tests/: test_examples.py  test_graph.py  test_operations.py
tests/correctness/: test_algorithms.py  test_operations.py
